# arctic-lake

./: .gitattributes  .gitignore  .obsidian.vimrc  2026-03-19_drosophila-deconv-psf.md  INDEX.md  LFP.md  Light Sheet Microscopy.md  My Library.bib  Overall concepts.md  README.md  backlog.md  debug_seg.md  dendrites.md  exports.toml  index.md  isoview-python-summary.md  isoview_workshop.md  lab_meetings.md  mbo_laser_setup.md  metadata_summary.md  notes.html  publish.css  pyproject.toml  references.bib  sync-notes.bat  sync-notes.ps1  temp.md  temp_weekly.md  usage.md  uv.md
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  hotkeys.json  publish.json  workspace.json
Cornell/: AON Context 2020.md  LFP.md
Excalidraw/: Drawing 2023-08-01 00.06.22.excalidraw.md  Drawing 2025-07-11 11.58.28.excalidraw.md
LFM Technical/: Data Exploration.md  General.md  Preprocessing.md  Segmentation.md
Neovim/: To Fix.md
RBO/: Don't reinvent the wheel.md  Interview.md  LBM.md  Meetings.md  Presentation.md  Questions.md  debug_server.md  extract.md  kevin.md
daily/: 2026-01-07.md  2026-01-08.md  2026-01-09.md  2026-01-12.md  2026-01-15.md  2026-01-16.md  2026-01-18.md  2026-01-20.md  2026-01-21.md  2026-01-22.md  2026-01-23.md  2026-01-26.md  2026-01-27.md  2026-01-28.md  2026-01-29.md  2026-01-30.md  2026-02-02.md  2026-02-03.md  2026-02-04.md  2026-02-05.md  2026-02-06.md  2026-02-08.md  2026-02-09.md  2026-02-10.md  2026-02-11.md  2026-02-12.md  2026-02-17.md  2026-02-18.md  2026-02-19.md  2026-02-20.md  2026-02-24.md  2026-02-25.md  2026-02-26.md  2026-02-27.md  2026-03-02.md  2026-03-03.md  2026-03-04.md  2026-03-05.md  2026-03-06.md  2026-03-09.md  (+54 more)
docs/: conf.py  index.md
hub/: Agarose_protocol.md  Calcium Imaging Pipelines.md  Cellpose.md  Compute.md  EXTRACT.md  HPC - General Usage.md  HPC File Transfer.md  HPC.md  Isoview_python.md  Laser Startup Procedure.md  Linux and Networking.md  NVIDIA-CUDA-GPU.md  NumPy Shapes and Data Buffers.md
light_sheet_microscopy/: Whole-central nervous system functional imaging larval Drosophila.md
mbo/: Meetings.md  Presentation.md  suite3d.md
notes/: File Permissions (Windows).md  HPC - General Usage.md  Performance Review.md  RBO-W1 Server Debugging.md  cellpose-overview.md  (+1 more)
(+171 files in other folders)
