[project]
name = "docs"
version = "0.1.0"
description = "Export Obsidian/Markdown notes to self-contained HTML and PDF"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "marimo>=0.19.1",
    "markdown>=3.10",
    "myst-parser>=5.0.0",
    "nbconvert>=7.0",
    "pygments>=2.19.2",
    "pymupdf>=1.24",
    "pyyaml>=6.0.3",
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-book-theme>=1.1.4",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.7.0",
    "weasyprint>=67.0",
]

[project.scripts]
export-note = "scripts.export_note:main"
build-docs = "scripts.build_docs:main"
build-index = "scripts.build_index:main"
extract-figures = "scripts.extract_figures:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
